# singbox-pro-max-ultra

./: .flutter-plugins-dependencies  .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.txt  CODE_IMPROVEMENTS.md  GITHUB_ACTIONS_GUIDE.md  KERNEL_MANAGEMENT.md  README.md  TEST.md  build.ps1  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: android-build.yml  ci.yml  code-quality.yml  linux-build.yml  macos-build.yml  multi-platform-build.yml  release.yml  stale.yml  windows-build.yml
.trae/: knowledge_base.md
.trae/rules/: default.md
android/: key.properties  key.properties.example  local.properties
android/app/: build.gradle.kts
doc/: DESIGN.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_COMPLETE.md
flutter_ui/: IMPLEMENTATION_SUMMARY.md  README.md  pubspec.yaml
flutter_ui/lib/: main.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
proxy_client/: IMPLEMENTATION.md  QUICK_START_WINDOWS.md  README.md
rust_core/: Cargo.toml
rust_core/src/: lib.rs
rust_core/src/config/: mod.rs
rust_core/src/ipc/: mod.rs
rust_core/src/kernels/: mihomo.rs  mod.rs  singbox.rs  v2ray.rs
scripts/: build_linux.sh  build_windows.ps1  create_dmg.sh  download_kernels.sh
test/: proxy_service_test.dart  widget_test.dart
universal-proxy-party/: README.md  pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+105 files in other folders)
