[package]
name = "proxy_client_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
yaml = ["serde_yaml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
once_cell = "1.18"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user", "signal"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
